# py2

./: .gitignore  alembic.ini  main.py  pyproject.toml  requirements.txt
app/core/: config.py  crypto.py  database.py  event_bus.py  logger.py
app/models/: account.py  campaign.py  contact.py  template.py  tracking.py
app/repositories/: account_repository.py  campaign_repository.py  contact_repository.py  tracking_repository.py
app/services/auth/: credential_service.py  google_auth_service.py
app/services/campaign/: account_rotation_service.py  campaign_service.py  scheduler_service.py  throttle_service.py
app/services/content/: fake_data_service.py  personalization.py  spinner_service.py  template_service.py
app/services/document/: attachment_service.py  image_service.py  pdf_service.py  report_exporter.py  word_service.py
app/services/email/: gmail_service.py  imap_service.py  mime_builder.py  smtp_service.py
app/tracking/: click_handler.py  pixel_handler.py  server.py
app/ui/: main_window.py
app/ui/dialogs/: account_dialog.py  campaign_wizard.py  import_dialog.py  settings_dialog.py
app/ui/panels/: accounts_panel.py  campaigns_panel.py  composer_panel.py  contacts_panel.py  dashboard_panel.py  document_panel.py  reports_panel.py  suppression_panel.py  templates_panel.py
app/ui/resources/editor/: index.html
app/ui/resources/styles/: dark_theme.qss
app/ui/workers/: imap_worker.py  import_worker.py  send_worker.py  tracking_worker.py
data/: test_phase3.docx
migrations/: env.py
migrations/versions/: 001_phase3_campaign_attachments.py
